k8s/trainstats-ui/trainstats-ui.yml
# trainstats-ui Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainstats-ui
  labels:
    app: trainstats-ui
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trainstats-ui
  template:
    metadata:
      labels:
        app: trainstats-ui
    spec:
      containers:
        - name: trainstats-ui
          image: registry.digitalocean.com/mat-n-image-registry/trainstats-ui@sha256:52e08c837c9a2257734a6b98e0ef896b1d1b7d2be864c8e573cce25ca2b0c989
          ports:
            - containerPort: 3000
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi

---

# trainstats-ui Service
apiVersion: v1
kind: Service
metadata:
  name: trainstats-ui
spec:
  selector:
    app: trainstats-ui
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000

---

# trainstats-realtime Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trainstats-realtime
  labels:
    app: trainstats-realtime
spec:
  replicas: 2
  selector:
    matchLabels:
      app: trainstats-realtime
  template:
    metadata:
      labels:
        app: trainstats-realtime
    spec:
      containers:
        - name: trainstats-realtime
          image: registry.digitalocean.com/mat-n-image-registry/trainstats-realtime:ccf8553b4384ad81402f372eeefba1be27dd36e4
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi

---

# trainstats-realtime Service
apiVersion: v1
kind: Service
metadata:
  name: trainstats-realtime
spec:
  selector:
    app: trainstats-realtime
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080

---

# Ingress Configuration
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: trainstats-ui-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"  # Disable SSL redirect
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-buffering: "off"
spec:
  rules:
    - http:
        paths:
          - path: /national
            pathType: Prefix
            backend:
              service:
                name: trainstats-realtime
                port:
                  number: 8080
          - path: /
            pathType: Prefix
            backend:
              service:
                name: trainstats-ui
                port:
                  number: 3000
